Updated for JDK21 LTS and latest lombok